[tool.poetry]
name = "mts_ui_testing_tool"
version = "0.1.0"
description = ""
authors = ["Artem Beletzky <belezky.artem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.2"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
